# UPCoP

./: CMakeLists.txt  README.md  UPCoP_1.txt  UPCoP_2.txt  UPCoP_3.txt  UPCoP_4.txt  UPCoP_5.txt  UPCoP_6.txt  UPCoP_7.txt  UPCoP_8.txt
src/: ADTSolver.cpp  ADTSolver.h  CLIParser.cpp  CLIParser.h  CMakeLists.txt  CNF.h  CadicalWrapper.cpp  CadicalWrapper.h  Clause.cpp  Clause.h  ConnectionCalculus.cpp  ConnectionCalculus.h  GroundLiteral.cpp  GroundLiteral.h  Literal.cpp  Literal.h  PropagatorBase.cpp  PropagatorBase.h  Term.cpp  Term.h  Z3Wrapper.cpp  Z3Wrapper.h  adt_solver.cpp  adt_solver.h  clause.cpp  clause.h  cnf.h  fmb_propagator.cpp  fmb_propagator.h  fo_literal.cpp  fo_literal.h  formula.cpp  formula.h  ground_literal.cpp  ground_literal.h  matrix_propagator.cpp  matrix_propagator.h  propagator_base.cpp  propagator_base.h  term.cpp  (+3 more)
